tests/Checker/everything/errors/16b.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *16: excess elements in array initialiser
Compilation was unsuccessful.
